--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MYSQL_HOST='127.0.0.1',
-MYSQL_USER="root",
-MYSQL_PASSWORD='',
-MYSQL_DATABASE='booking_db'
+DB_HOST='localhost'
+DB_USERNAME='root'
+DB_PASSWORD=''
+DB_DATABASE='booking_db'
